# dagger

./: .bazelrc  BUILD  MODULE.bazel  README.md  WORKSPACE  _config.yml  build_defs.bzl  gradle.properties  maven_install.json  members-injection.md  settings.gradle.kts  test_defs.bzl
.allstar/: binary_artifacts.yaml
buildSrc/: build.gradle.kts
dagger-android/: BUILD  build.gradle.kts
dagger-android-processor/: BUILD
dagger-android-proguard-processor/: BUILD
dagger-android-support/: BUILD  build.gradle.kts
dagger-compiler/: BUILD  build.gradle.kts
dagger-grpc-server/: build.gradle.kts
dagger-grpc-server-annotations/: build.gradle.kts
dagger-grpc-server-processor/: BUILD  build.gradle.kts
dagger-lint/: BUILD
dagger-producers/: build.gradle.kts
dagger-runtime/: build.gradle.kts
dagger-spi/: BUILD  build.gradle.kts
dagger-testing/: build.gradle.kts
dev-guide/: android.md  assisted-injection.md  compiler-options.md  faq.md  index.md  ksp.md  multibindings.md  spi.md  testing.md  versions.md
examples/: BUILD
gradle/: libs.versions.toml
gradle-projects/: README.md
gwt/: BUILD
hilt/: android-entry-point.md  application.md  compiler-options.md  components.md  custom-inject.md  entry-points.md  flags.md  gradle-setup.md  instrumentation-testing.md  migration-guide.md  modules.md  optional-inject.md  quick-start.md  robolectric-testing.md  testing-philosophy.md  testing.md  view-model.md
hilt-android/: BUILD  build.gradle.kts
hilt-android-testing/: BUILD  build.gradle.kts
hilt-compiler/: BUILD
hilt-core/: BUILD
javatests/: BUILD
(+3975 files in other folders)
