# Copyright (C) 2024 The Dagger Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
)

bazel_dep(
    name = "rules_java",
    version = "7.0.6",
)

bazel_dep(
    name = "rules_kotlin",
    version = "1.9.0",
    repo_name = "io_bazel_rules_kotlin",
)

bazel_dep(
    name = "rules_jvm_external",
    version = "5.3",
)

bazel_dep(
    name = "rules_robolectric",
    version = "4.11.1",
    repo_name = "robolectric",
)
